--- a/src/main/resources/org/nkon/studentmanagementsystem/addStudent.fxml
+++ b/src/main/resources/org/nkon/studentmanagementsystem/addStudent.fxml
@@ -7,49 +7,48 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nkon.studentmanagementsystem.Controllers.AddStudentController">
    <children>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
          <children>
             <Label prefHeight="40.0" prefWidth="84.0" text="Name" />
-            <TextField />
+            <TextField fx:id="nameTextField"/>
          </children>
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
          <children>
             <Label prefHeight="24.0" prefWidth="83.0" text="Father's Name" />
-            <TextField />
+            <TextField fx:id="fatherNameTextField"/>
          </children>
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
          <children>
             <Label prefHeight="39.0" prefWidth="84.0" text="City" />
-            <TextField />
+            <TextField fx:id="cityTextField"/>
          </children>
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
          <children>
             <Label prefHeight="38.0" prefWidth="86.0" text="Blood" />
-            <ComboBox prefWidth="150.0" promptText="Choose Blood Type" />
+            <ComboBox fx:id="bloodTypeComboBox" prefWidth="150.0" promptText="Choose Blood Type" />
          </children>
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
          <children>
             <Label prefHeight="30.0" prefWidth="87.0" text="Phone" />
-            <TextField />
+            <TextField fx:id="phoneTextField"/>
          </children>
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
          <children>
             <Label prefHeight="27.0" prefWidth="89.0" text="Class" />
-            <TextField />
+            <TextField fx:id="classTextField"/>
          </children>
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
          <children>
-            <Button mnemonicParsing="false" text="Submit" />
-            <Button mnemonicParsing="false" text="Back" />
+            <Button mnemonicParsing="false" onAction="#submitButtonClick" text="Submit" />
+            <Button mnemonicParsing="false" onAction="#backButtonClick" text="Back" />
          </children>
       </HBox>
    </children>
