--- a/src/main/resources/org/nkon/studentmanagementsystem/mainMenu.fxml
+++ b/src/main/resources/org/nkon/studentmanagementsystem/mainMenu.fxml
@@ -51,7 +51,7 @@
                            </image>
                         </ImageView>
                         <Button mnemonicParsing="false" onAction="#handleAddStudentButton" text="Add Student" />
-                        <Button mnemonicParsing="false" prefWidth="83.0" text="Add Admin">
+                        <Button mnemonicParsing="false" onAction="#handleAddAdminButton" prefWidth="83.0" text="Add Admin">
                            <VBox.margin>
                               <Insets />
                            </VBox.margin>
@@ -65,7 +65,7 @@
                               <Image url="@../../../images/operation.png" />
                            </image>
                         </ImageView>
-                        <Button mnemonicParsing="false" text="Operation" />
+                        <Button mnemonicParsing="false" onAction="#handleOperationButton" text="Operation" />
                      </children>
                   </VBox>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="2.0">
@@ -75,8 +75,8 @@
                               <Image url="@../../../images/show.png" />
                            </image>
                         </ImageView>
-                        <Button mnemonicParsing="false" text="Show Students" />
-                        <Button mnemonicParsing="false" prefWidth="95.0" text="Show Admins" />
+                        <Button mnemonicParsing="false" onAction="#handleShowStudentsButton" text="Show Students" />
+                        <Button mnemonicParsing="false" onAction="#handleShowAdminsButton" prefWidth="95.0" text="Show Admins" />
                      </children>
                   </VBox>
                </children>
