--- a/src/main/resources/org/nkon/studentmanagementsystem/addAdmin.fxml
+++ b/src/main/resources/org/nkon/studentmanagementsystem/addAdmin.fxml
@@ -6,9 +6,26 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.nkon.studentmanagementsystem.AddAdmin"
-            prefHeight="400.0" prefWidth="600.0">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nkon.studentmanagementsystem.Controllers.AddAdminController">
+    <children>
+        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+            <children>
+                <Label prefHeight="40.0" prefWidth="84.0" text="Email" />
+                <TextField fx:id="emailTextField"/>
+            </children>
+        </HBox>
+        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+            <children>
+                <Label prefHeight="24.0" prefWidth="83.0" text="Password" />
+                <TextField fx:id="passwordTextField"/>
+            </children>
+        </HBox>
 
-</AnchorPane>
+        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
+            <children>
+                <Button mnemonicParsing="false" onAction="#submitButtonClick" text="Submit" />
+                <Button mnemonicParsing="false" onAction="#backButtonClick" text="Back" />
+            </children>
+        </HBox>
+    </children>
+</VBox>
