--- a/src/main/resources/org/nkon/studentmanagementsystem/operation.fxml
+++ b/src/main/resources/org/nkon/studentmanagementsystem/operation.fxml
@@ -1,14 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.nkon.studentmanagementsystem.Operation"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nkon.studentmanagementsystem.Controllers.OperationController">
+    <children>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" translateX="30.0">
+         <children>
+            <Label prefHeight="40.0" prefWidth="84.0" text="ID" />
+            <TextField fx:id="idTextField" />
+            <Button mnemonicParsing="false" onAction="#searchButtonClick" text="Search" />
+         </children>
+      </HBox>
+        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+            <children>
+                <Label prefHeight="40.0" prefWidth="84.0" text="Name" />
+                <TextField fx:id="nameTextField" />
+            </children>
+        </HBox>
+        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+            <children>
+                <Label prefHeight="24.0" prefWidth="83.0" text="Father's Name" />
+                <TextField fx:id="fatherNameTextField" />
+            </children>
+        </HBox>
+        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+            <children>
+                <Label prefHeight="39.0" prefWidth="84.0" text="City" />
+                <TextField fx:id="cityTextField" />
+            </children>
+        </HBox>
+        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+            <children>
+                <Label prefHeight="38.0" prefWidth="86.0" text="Blood" />
+                <ComboBox fx:id="bloodTypeComboBox" prefWidth="150.0" promptText="Choose Blood Type" />
+            </children>
+        </HBox>
+        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+            <children>
+                <Label prefHeight="30.0" prefWidth="87.0" text="Phone" />
+                <TextField fx:id="phoneTextField" />
+            </children>
+        </HBox>
+        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+            <children>
+                <Label prefHeight="27.0" prefWidth="89.0" text="Class" />
+                <TextField fx:id="classTextField" />
+            </children>
+        </HBox>
+        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
+            <children>
+                <Button mnemonicParsing="false" onAction="#updateButtonClick" text="Update" />
+                <Button mnemonicParsing="false" onAction="#deleteButtonClick" text="Delete" />
+                <Button mnemonicParsing="false" onAction="#backButtonClick" text="Back" />
+            </children>
+        </HBox>
+    </children>
+</VBox>
