--- a/src/main/resources/org/nkon/studentmanagementsystem/showAdmins.fxml
+++ b/src/main/resources/org/nkon/studentmanagementsystem/showAdmins.fxml
@@ -6,9 +6,30 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.nkon.studentmanagementsystem.ShowAdmins"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.nkon.studentmanagementsystem.Controllers.ShowAdminsController">
+    <children>
+        <HBox alignment="CENTER" prefHeight="320.0" prefWidth="619.0">
+            <children>
+                <TableView fx:id="adminsTableView" prefHeight="316.0" prefWidth="532.0">
+                    <columns>
+                        <TableColumn fx:id="emailTableColumn" prefWidth="75.0" text="Email" />
+                        <TableColumn fx:id="passwordTableColumn" prefWidth="98.0" text="Password" />
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                </TableView>
+            </children>
+        </HBox>
+        <HBox alignment="CENTER" prefHeight="40.0" prefWidth="503.0">
+            <children>
+                <Pagination fx:id="adminsPagination" prefHeight="44.0" prefWidth="95.0" />
+            </children>
+        </HBox>
+        <HBox alignment="CENTER" prefHeight="44.0" prefWidth="533.0">
+            <children>
+                <Button mnemonicParsing="false" onAction="#handleBackButton" text="Back" />
+            </children>
+        </HBox>
+    </children>
+</VBox>
